Describe bandwidth behaviour in detail

--- a/modules/ROOT/pages/navigating.adoc
+++ b/modules/ROOT/pages/navigating.adoc
@@ -213,7 +213,10 @@ When activated, the client limits the upload or download bandwidth to 25% of the
 
 image::navigating/settings_network.png[Network Settings,width=60%,pdfwidth=60%]
 
-Changed settings will affect all new transfers (next upload chunk or next download), but not affect already running transfers.
+[NOTE]
+====
+Enabling this feature will affect all new transfers (next upload chunk or next download), but not affect already running transfers. Changing this setting or disabling this feature with take effect immediately.
+====
 
 === Using the Ignored Files Editor
 
