--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -8,7 +8,7 @@
 * xref:removing.adoc[Removing the Desktop App]
 * xref:faq.adoc[FAQ]
 * xref:advanced_usage/index.adoc[Advanced Usage]
-** xref:advanced_usage/command_line_options.adoc[Options]
+** xref:advanced_usage/command_line_client.adoc[The Command Line Client]
 ** xref:advanced_usage/configuration_file.adoc[Configuration File]
 ** xref:advanced_usage/environment_variables.adoc[Environment Variables]
 ** xref:advanced_usage/command_line_client.adoc[Command-Line Options]
