[Windows] Clarify requirement for native WinVFS
According to my knowledge, native WinVFS works on all Win versions > 1709 (Win 10, 11, Win server 2019 + 2022)

--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -31,7 +31,7 @@ Depending on the operating system used, some minimum system requirements need to
 Windows::
 * Windows 7+
 ** x86 with 32-bit or x86-64 with 64-bit
-** Native WinVFS available for Windows 10 version 1709 or later
+** Native WinVFS available for Windows versions 1709 or later
 
 macOS::
 * macOS 10.12+
