--- a/modules/ROOT/pages/web_app.adoc
+++ b/modules/ROOT/pages/web_app.adoc
@@ -21,18 +21,18 @@ When more than one person is working on the same document and using a locally in
 
 The first image shows an office file via the browser.
 
-image::web_app/office_file_in_browser.png[file in browser, width=70%,pdfwidth=70%]
+image::web_app/office_file_in_browser.png[file in browser, width=600,pdfwidth=70%]
 
 This file gets synced by the Desktop App and is locally available.
 
-image::web_app/office_file_in_explorer.png[file in explorer, width=70%,pdfwidth=70%]
+image::web_app/office_file_in_explorer.png[file in explorer, width=600,pdfwidth=70%]
 
 btn:[Right-click] on the file to open the context menu and click menu:ownCloud[open in ...] to select the application available. Note that the web app shown is the one configured by the admin for this office file type. If menu:open in ...[] is not available, office web apps have either not been enabled by the administrator at all or not for this office file type.
 
-image::web_app/office_file_context_menu.png[file context, width=70%,pdfwidth=70%]
+image::web_app/office_file_context_menu.png[file context menu, width=600,pdfwidth=70%]
 
 A browser window with the web app selected opens the file. When you are leaving the office web app, changed files are saved automatically.
 
-image::web_app/office_file_in_web_app.png[file in web app, width=70%,pdfwidth=70%]
+image::web_app/office_file_in_web_app.png[file in web app, width=550,pdfwidth=70%]
 
 Note that if multiple persons are accessing the same file via the office web app, the app can show who has opened the file. Depending on the office web app, final saving may occur when the last person accessing a file in the office web app closes the office web app session or the last tab. This is indicated by the changed modification time. Syncing back will only occur after the file has been saved.
