Apply suggestions from code review
language review

--- a/modules/ROOT/pages/web_app.adoc
+++ b/modules/ROOT/pages/web_app.adoc
@@ -1,25 +1,25 @@
 = Open Files with Office Web Apps
 :toc: right
 
-:description: When using Infinite Scale, you can open synced Office files locally using Office Web Apps.
+:description: When using Infinite Scale, you can open and edit synced office files locally using office web apps.
 
 == Introduction
 
-{description} This is very beneficial for some reasons:
+{description} This is very beneficial if:
 
-* if your local environment does not have an office package installed or available,
-* collaborative working on the same document.
+*  your local environment does not have an office package installed or available,
+* you are collaborating with others on the same document.
 
-When more than one person is working on the same document and using a locally installed office application, it may happen that you raise syncronisation conflicts as others have synced a changed the document in the meanwhile. This can be hard to get resolved. When using Office Web Apps, collaborative working is managed by the web application and synchronisation is no longer an issue.
+When more than one person is working on the same document and using a locally installed office application, synchronization conflicts may happen if others sync a changed document while someone else is editing it. This can be hard to resolve. When using office web apps, collaborative working is managed by the web application and synchronization is no longer an issue.
 
 == Prerequisite
 
-* Beside a browser, there is no prerequisite necessary from the user side or any setting to be made in the Desktop App.
-* The Infinite Scale instance in the backend needs to have been configured and enabled using Office Web Apps. A configuration can be made by the administrator for multiple or particular office file types. If Office Web Apps are either not configured and enabled for all available or particular office file types, the funtionality is either not available in the context menu at all or only for the configured ones.. Contact your administrator for more details.
+* The user only needs a browser. No settings need to be made in the Desktop App.
+* The Infinite Scale instance in the backend needs to have been configured accordingly with office web apps enabled. The administrator can configure the system for multiple or only particular office file types. If office web apps are not configured and enabled for all available or particular office file types, the functionality is either not available in the context menu at all or only for the configured ones. Contact your administrator for more details.
 
 == Open Files via Office Web Apps
 
-The first image shows an Office file via the browser.
+The first image shows an office file via the browser.
 
 image::web_app/office_file_in_browser.png[file in browser, width=70%,pdfwidth=70%]
 
@@ -27,12 +27,12 @@ This file gets synced by the Desktop App and is locally available.
 
 image::web_app/office_file_in_explorer.png[file in explorer, width=70%,pdfwidth=70%]
 
-btn:[Right click] on the file to open the context menu and click menu:ownCloud[open in ...] to select the application available. Note that the web app shown is the one configured by the admin for this office file type. If menu:open in ...[] is not available, office web apps have either not been enabled y the administrator at all or for this office file type.
+btn:[Right-click] on the file to open the context menu and click menu:ownCloud[open in ...] to select the application available. Note that the web app shown is the one configured by the admin for this office file type. If menu:open in ...[] is not available, office web apps have either not been enabled by the administrator at all or not for this office file type.
 
 image::web_app/office_file_context_menu.png[file context, width=70%,pdfwidth=70%]
 
-A browser window with the web app selected using the file opens. When leaving the Office Web App, the file gets saved on changes automatically.
+A browser window with the web app selected opens the file. When you are leaving the office web app, changed files are saved automatically.
 
 image::web_app/office_file_in_web_app.png[file in web app, width=70%,pdfwidth=70%]
 
-Note that if multiple persons are accessing the same file via the Office Web App, the Office Web App can show who has opened the file. Depending on the Office Web App, final saving may occur when the last person respectively the last tab of the same person that has accessed the Office Web App closes the Office Web App session/tab which you can see by the changed modification time. Syncing back will only occur after the file got saved.
+Note that if multiple persons are accessing the same file via the office web app, the app can show who has opened the file. Depending on the office web app, final saving may occur when the last person accessing a file in the office web app closes the office web app session or the last tab. This is indicated by the changed modification time. Syncing back will only occur after the file has been saved.
