--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -70,7 +70,7 @@ Desktop App log files contain file and folder names, metadata, server URLs and o
 +
 The Log Output window opens.
 +
-image:appendices/troubleshooting/log_output_window.png[image,width=60%,pdfwidth=60%]
+image::appendices/troubleshooting/log_output_window.png[image,width=600,pdfwidth=60%]
 +
 .  Enable the btn:[Enable logging to temporary folder] checkbox.
 .  Later, to find the log files, click the btn:[Open folder] button.
